state after running rewrite

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,11 +1,6 @@
 dependencies = [
 ]
 
-exe = executable(
-  'rewriter-test',
-  'rewriter_test.c',
-  dependencies : dependencies,
-  install : true,
-)
+exe = executable('rewriter-test', '../empty.c', 'rewriter_test.c', dependencies : dependencies, install : true)
 
 test('basic', exe)
